tests/NormalTests/paczka1/fuzzy1/39217179.err
Error in line 2: SCNuSgrSv S553 86,9
Error in line 11: YuRSpCx3 S553 54,6
Error in line 16: YuRSpCx3 S857 62,5
Error in line 19: S857 A263 86,7
Error in line 14: SCNuSgrSv S553 322,4
Error in line 26: 26O A875 44,5
